third_party/move/move-compiler-v2/tests/lambda/inline-parity/masking.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/masking.move:8:13
  │
8 │         foo(|x, _| x, |_, y| y, 10, 100)
  │             ^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/masking.move:8:23
  │
8 │         foo(|x, _| x, |_, y| y, 10, 100)
  │                       ^^^^^^^^
